# archived-jvpp

./: .gitignore  .gitreview  CMakeLists.txt  INFO.yaml  clean.sh  install_jvpp.sh  version
Requierements/: Makefile
Requirements/: Makefile
Test/: test_jvpp.py
docs/: .gitignore  CMakeLists.txt  conf.py.in  docs.rst  index.rst  jvpp.rst  release_notes.rst
java/: .gitignore  CMakeLists.txt  Readme.txt
java/jvpp-acl/: jvpp_acl.c
java/jvpp-acl/io/fd/jvpp/acl/examples/: AclExpectedDumpData.java  AclTestData.java  AclTestRequests.java  FutureApiExample.java  Readme.txt
java/jvpp-acl/io/fd/jvpp/acl/test/: CallbackApiTest.java  FutureApiTest.java  Readme.txt
java/jvpp-common/: jvpp_common.c  string_t.h
java/jvpp-core/: jvpp_core.c  jvpp_core.h
java/jvpp-core/io/fd/jvpp/core/examples/: CallbackApiExample.java  CallbackApiReadPerfTest.java  CallbackApiWritePerfTest.java  CallbackCliApiExample.java  CallbackJVppFacadeExample.java  CallbackJVppFacadeNotificationExample.java  CallbackNotificationApiExample.java  CreateSubInterfaceExample.java  FutureApiExample.java  FutureApiNotificationExample.java  FutureApiReadPerfTest.java  L2AclExample.java  LispAdjacencyExample.java  NotificationUtils.java  Readme.txt
java/jvpp-core/io/fd/jvpp/core/test/: CallbackApiTest.java  FutureApiTest.java  Readme.txt
java/jvpp-gtpu/: jvpp_gtpu.c
java/jvpp-ikev2/: jvpp_ikev2.c  jvpp_ikev2.h
java/jvpp-ioamexport/: jvpp_ioam_export.c
java/jvpp-ioamexport/io/fd/jvpp/ioamexport/examples/: IoamExportApiExample.java  Readme.txt
java/jvpp-ioamexport/io/fd/jvpp/ioamexport/test/: CallbackApiTest.java  FutureApiTest.java  Readme.txt
java/jvpp-ioampot/: jvpp_ioam_pot.c
java/jvpp-ioampot/io/fd/jvpp/ioampot/examples/: IoamPotApiExample.java  Readme.txt
java/jvpp-ioampot/io/fd/jvpp/ioampot/test/: CallbackApiTest.java  FutureApiTest.java  Readme.txt
java/jvpp-ioamtrace/: jvpp_ioam_trace.c
java/jvpp-ioamtrace/io/fd/jvpp/ioamtrace/examples/: IoamTraceApiExample.java  Readme.txt
java/jvpp-ioamtrace/io/fd/jvpp/ioamtrace/test/: CallbackApiTest.java  FutureApiTest.java  Readme.txt
java/jvpp-nat/: jvpp_nat.c
java/jvpp-nat/io/fd/jvpp/nat/examples/: CallbackApiExample.java  Readme.txt
java/jvpp-nat/io/fd/jvpp/nat/test/: CallbackApiTest.java  FutureApiTest.java  Readme.txt
java/jvpp-nsh/: jvpp_nsh.c
java/jvpp-pppoe/: jvpp_pppoe.c
java/jvpp-registry/: jvpp_registry.c
java/jvpp-registry/io/fd/jvpp/: AbstractCallbackApiTest.java  Assertions.java  JVpp.java  JVppRegistry.java  JVppRegistryImpl.java  NativeLibraryLoader.java  VppBaseCallException.java  VppCallbackException.java  VppConnection.java  VppInvocationException.java  VppJNIConnection.java
java/jvpp-registry/io/fd/jvpp/callback/: ControlPingCallback.java  JVppCallback.java  JVppNotificationCallback.java
java/jvpp-registry/io/fd/jvpp/coverity/: SuppressFBWarnings.java
java/jvpp-registry/io/fd/jvpp/dto/: ControlPing.java  ControlPingReply.java  JVppDump.java  JVppReply.java  JVppReplyDump.java  JVppRequest.java
java/jvpp-registry/io/fd/jvpp/future/: AbstractFutureJVppInvoker.java  FutureJVppInvoker.java
java/jvpp-registry/io/fd/jvpp/notification/: EventRegistry.java  EventRegistryProvider.java
java/jvpp-registry/io/fd/jvpp/test/: ConnectionTest.java
java/jvpp-stats/: jvpp_interface_stats.h  jvpp_stats.c  jvpp_stats.h  jvpp_stats_registry.c
java/jvpp-stats/io/fd/jvpp/stats/: JVppClientStatsImpl.java  JVppStats.java  JVppStatsImpl.java  JVppStatsRegistryImpl.java  VppStatsJNIConnection.java
java/jvpp-stats/io/fd/jvpp/stats/callback/: InterfaceNamesDetailsCallback.java  InterfaceStatisticsDetailsCallback.java  JVppStatsGlobalCallback.java
java/jvpp-stats/io/fd/jvpp/stats/callfacade/: CallbackJVppStats.java  CallbackJVppStatsFacade.java  CallbackJVppStatsFacadeCallback.java
java/jvpp-stats/io/fd/jvpp/stats/dto/: InterfaceName.java  InterfaceNamesDetails.java  InterfaceNamesDetailsReplyDump.java  InterfaceNamesDump.java  InterfaceStatistics.java  InterfaceStatisticsDetails.java  InterfaceStatisticsDetailsReplyDump.java  InterfaceStatisticsDump.java
java/jvpp-stats/io/fd/jvpp/stats/future/: AbstractFutureJVppInvoker.java  FutureJVppInvoker.java  FutureJVppStats.java  FutureJVppStatsFacade.java  FutureJVppStatsFacadeCallback.java
java/jvpp-stats/io/fd/jvpp/stats/test/: FutureApiNamesTest.java  FutureApiTest.java  JvppStatsApiTest.java  Readme.txt
modules/: FindSphinx.cmake  ccache.cmake  cpu.cmake  misc.cmake
scripts/: checkstyle.sh  install_jvpp.sh  verify-installed
tests/: list_tests.py  log.py  requirements.txt  test_jvpp.py
